--- a/ShopApp_ex1/nbproject/project.properties
+++ b/ShopApp_ex1/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ShopApp_ex1
-main.class=duke.choice.ShopApp_ex1
+main.class=duke.choice.ShopApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
